fix: adjust font size and white space for conpact header buttons

--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -48,7 +48,7 @@
   }
 
   &--compact {
-    padding: 0.6875rem;
-    font-size: 0.875rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 }
