--- a/src/scss/components/country-switcher/_country-switcher.scss
+++ b/src/scss/components/country-switcher/_country-switcher.scss
@@ -40,8 +40,8 @@
 
   &--compact {
     .iati-country-switcher__control {
-      padding: 0.6875rem 2rem 0.6875rem calc(0.875rem + 1rem);
-      font-size: 0.875rem;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
     }
     &::after {
       right: 0.6875rem;
